# mysql2pg

./: README.md  config.exemple.yaml  main.py  pyproject.toml  requirements.txt
migrator_sql_pg/: app.py  main.py  main_wrapper.py  retry_decorator.py  sanity_check.py  transfer_batch.py  utils.py
mysql2pg/: app.py  main.py  main_wrapper.py  sanity_check.py  transfer_batch.py  utils.py
