[project]
name = "migration-sql-pg"
version = "0.1.0"
description = "Migrate your database from MySQL to PostgreSQL"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [{name='Lucas Pereira', email='lucaspereira0497@gmail.com'}]

[project.scripts]
migrate-sql-pg = "migrate-sql-pg.app:app"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length=100
